--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "svg-sprite-loader": "^5.0.0",
     "svg-sprite-loader-mod": "^4.1.6-mod1",
     "svgo-loader": "^2.2.1",
+    "swiper": "^6.1.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
